# ParserTest

./: CMakeLists.txt  IR_Gen_Context.cpp  IR_Gen_Context.h  LLVM_IR_Gen.cpp  README.md  SC.cpp  SC.sln  SC.vcxproj  SC_API.cpp  SC_API.h  Start_VS.bat  light_shader_example.ls  parser_AST_Gen.cpp  parser_AST_Gen.h  parser_defines.cpp  parser_defines.h
src/: CMakeLists.txt  IR_Gen_Context.cpp  IR_Gen_Context.h  LLVM_IR_Gen.cpp  SC_API.cpp  SC_API.h  parser_AST_Gen.cpp  parser_AST_Gen.h  parser_defines.cpp  parser_defines.h
test/: SC.cpp
test/basic_expressions/: CMakeLists.txt  basic_expressions.ls  sample.cpp
test/external_function/: CMakeLists.txt  sample.cpp  sample.ls
test/for_expression/: CMakeLists.txt  for_expression.ls  sample.cpp
test/generic_tests/: CMakeLists.txt  sample.cpp  test_00.ls  test_01.ls  test_02.ls
test/recursive_call/: CMakeLists.txt  recursive_call.ls  sample.cpp
test/struct_mem_layout/: CMakeLists.txt  sample.cpp  struct_mem_layout.ls
