add_definitions( -DKSC_BUILD_LIB )
add_definitions( "/wd4800 /wd4146 /wd4996 /wd4244 /wd4267" )

set( LLVM_SDK_PATH $ENV{LLVM_INSTALL_PATH} CACHE PATH "Path to the LLVM SDK." )

include_directories( "${LLVM_SDK_PATH}/include" )


file( GLOB_RECURSE KSC_SRC RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.c *.h )
add_library( ${KSC_MODULE_NAME} SHARED ${KSC_SRC} )



install( TARGETS ${KSC_MODULE_NAME} RUNTIME DESTINATION bin )

# Specify the dependencies of library
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMJIT.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMInterpreter.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMX86CodeGen.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMX86AsmParser.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMX86Disassembler.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMRuntimeDyld.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMExecutionEngine.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMAsmPrinter.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMSelectionDAG.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMX86Desc.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMMCParser.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMCodeGen.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMX86AsmPrinter.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMX86Info.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMScalarOpts.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMX86Utils.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMInstCombine.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMTransformUtils.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMipa.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMAnalysis.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMTarget.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMCore.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMMC.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMObject.lib" )
target_link_libraries( ${KSC_MODULE_NAME} debug "${LLVM_SDK_PATH}/lib_debug/LLVMSupport.lib" )

target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMJIT.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMInterpreter.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMX86CodeGen.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMX86AsmParser.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMX86Disassembler.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMRuntimeDyld.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMExecutionEngine.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMAsmPrinter.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMSelectionDAG.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMX86Desc.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMMCParser.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMCodeGen.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMX86AsmPrinter.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMX86Info.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMScalarOpts.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMX86Utils.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMInstCombine.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMTransformUtils.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMipa.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMAnalysis.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMTarget.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMCore.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMMC.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMObject.lib" )
target_link_libraries( ${KSC_MODULE_NAME} optimized "${LLVM_SDK_PATH}/lib_release/LLVMSupport.lib" )
